# my-clock

./: Cargo.toml  LICENSE  README.md
portable/: Cargo.toml
portable/src/: lib.rs
portable/src/ui/: mod.rs  statemanager.rs
src/: main.rs
思路/: 基于stm32的时钟设计.xmind
