[package]
name = "my-clock"
version = "0.1.0"
authors = ["your name <1542844298@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stm32f1xx-hal = { version = "0.3", features = ["rt", "stm32f103" ] }
cortex-m = "0.5"
cortex-m-rtfm = "0.4.0"
panic-semihosting = "0.5"
epd-waveshare = { version = "0.3.2", features = ["type_a_alternative_faster_lut"] }
embedded-hal = "0.2.1"
embedded-graphics = "0.4.1"
portable = { path = "portable" }