[package]
name = "portable"
version = "0.1.0"
authors = ["your name <1542844298@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.0"
embedded-graphics = "0.4.1"
heapless = "0.4"
epd-waveshare = { version = "0.3.2", features = ["type_a_alternative_faster_lut"] }
embedded-hal = { version = "0.2.1", features = ["unproven"] }
